Fix floating label overlap on focus

--- a/app/assets/stylesheets/shared/form.scss
+++ b/app/assets/stylesheets/shared/form.scss
@@ -63,6 +63,7 @@
     height: auto;
     font-size: 1rem;
     width: auto;
+    z-index: 6;
 
     &.is-invalid {
       color: $form-feedback-invalid-color;
